--- a/styles/_utility.scss
+++ b/styles/_utility.scss
@@ -17,3 +17,7 @@ $White: hsl(0, 0%, 100%);
 $Pale-blue: hsl(221, 100%, 96%);
 $Light-lavender: hsl(241, 100%, 89%);
 $Dark-gray-blue: hsl(224, 30%, 27%);
+
+// other
+$fb: flex;
+$s-b: space-between;
