--- a/styles/style.css
+++ b/styles/style.css
@@ -406,7 +406,6 @@ main {
   max-width: 37.5rem;
   display: flex;
   justify-content: space-between;
-  color: white;
   background-color: hsl(0, 0%, 100%);
   border: none;
   border-radius: 25px;
@@ -418,7 +417,7 @@ section {
 }
 
 main section:nth-child(1) {
-  background: linear-gradient(180deg, hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
   text-align: center;
   padding-top: 1rem;
   border-radius: 25px;
@@ -513,7 +512,8 @@ main section:nth-child(2) {
   transition: 0.3s ease-in-out;
 }
 .continue__btn:hover {
-  background: linear-gradient(180deg, hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  cursor: pointer;
 }
 
 .reaction__text {
@@ -554,4 +554,38 @@ main section:nth-child(2) {
 
 span {
   color: hsl(224, 30%, 27%);
+}
+
+@media screen and (max-width: 34.375rem) {
+  body {
+    display: unset;
+    justify-content: unset;
+    background-color: hsl(0, 0%, 100%);
+    align-items: unset;
+  }
+  main {
+    max-width: 100%;
+    flex-direction: column;
+    border-radius: unset;
+    border-radius: unset;
+    box-shadow: unset;
+  }
+  section {
+    width: 100%;
+  }
+  main section:nth-child(1) {
+    border-radius: unset;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    padding-bottom: 2.2rem;
+  }
+  .container {
+    margin-bottom: 1.4rem;
+  }
+  .circle {
+    margin-bottom: 1.5rem;
+  }
+  .heading {
+    margin-bottom: 1.5rem;
+  }
 }/*# sourceMappingURL=style.css.map */
